k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: social-downloader
  labels:
    name: social-downloader
