k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-downloader-service
  namespace: social-downloader
  labels:
    app: social-downloader-api
spec:
  selector:
    app: social-downloader-api
  ports:
  - name: http
    port: 80
    targetPort: 2500
    protocol: TCP
  type: ClusterIP
